aantal toevoegingen html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,74 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Roboto:ital,wght@0,300;0,400;0,500;1,700&display=swap"
+              rel="stylesheet">
+        <title>Rekupe digital agency</title>
     </head>
     <body>
+        <header>
+            <section class="outer-container">
+                <nav class="inner-container">
+                    <ul>
+                        <li><a href="">Case studies</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Contact Us</a></li>
+                    </ul>
+                </nav>
+                <div class="inner-container">
+                    <h1>Your website is an investment in the success of your business.</h1>
+                    <p>We are here to help you succeed.</p>
+                    <button type="submit">LET'S WORK TOGETHER</button>
+                </div>
+<!--                hier nog de background image toevoegen-->
+                <div class="inner-container"></div>
+            </section>
+        </header>
+
+        <main>
+<!--            gaat dit goed? Of moet elke section een outer container zijn en die nog een inner krijgen?-->
+            <div class="outer-container">
+                <section class="inner-container">
+                    <h3>
+                        Rekupe is a digital agency in Los Angeles. <br> We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.
+                        <br> We see every project as a fresh opportunity, pushing ourselves to create new digital experiences. 
+                    </h3>
+                    <p>Have a question? <a href="">Click here</a> to contact us! </p>
+                </section>
+
+
+                <section class="inner-container">
+                    <article>
+                        <div>
+                            <h3>testtesttest</h3>
+                            <p></p>
+                        </div>
+                        <span></span></article>
+                    <article>
+                        <div>
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                        <span></span></article>
+                    <article>
+                        <div>
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                        <span></span></article>
+                
+                </section>
+                <section class="inner-container"></section>
+                <section class="inner-container"></section>
+
+
+            </div>
+
+        </main>
+
 
     </body>
 </html>
